Abandoned 1D Array, adopted 2D Array

--- a/Games/Minesweeper --IN PROGRESS/index.html
+++ b/Games/Minesweeper --IN PROGRESS/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  	<script src="spot.js"></script>
+  	<script src="plot.js"></script>
 
 </body></html>
